--- a/app/src/main/res/layout/view_photo.xml
+++ b/app/src/main/res/layout/view_photo.xml
@@ -40,6 +40,20 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp" />
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1">
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/playBtnIcon"
+                    android:src="@drawable/audio_play_button"
+                    android:layout_weight="0.08" />
+            </LinearLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
