--- a/app/src/main/res/layout/add_photo.xml
+++ b/app/src/main/res/layout/add_photo.xml
@@ -83,13 +83,12 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <ImageView
+            <net.junsun.l19_custom_view.TouchDrawView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:id="@+id/addedPhoto"
-                android:layout_below="@+id/addButton"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp" />
+                android:layout_height="309dp"
+                android:id="@+id/myview"
+                android:layout_gravity="right"
+                android:layout_marginTop="10dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -97,7 +96,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:id="@+id/textCaption"
                 android:hint="Enter Your Caption Here"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="10dp" />
 
         </LinearLayout>
     </ScrollView>
