--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="for_camera">#bbe2fb</color>
+    <color name="for_record">#e7cdfc</color>
+    <color name="for_draw">#fdc7f9</color>
 </resources>
