--- a/app/src/main/res/layout/view_photo.xml
+++ b/app/src/main/res/layout/view_photo.xml
@@ -23,14 +23,44 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
 
-            <Button
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/returnButton"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:text="Return"
-                android:layout_gravity="center_horizontal" />
+                android:weightSum="1">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/returnButton"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:text="Return"
+                    android:layout_gravity="center_horizontal" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/playBtnIcon"
+                    android:src="@drawable/audio_play_button" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/mapButton"
+                    android:src="@drawable/location_button" />
+
+            </LinearLayout>
 
             <ImageView
                 android:layout_width="match_parent"
@@ -39,20 +69,6 @@
                 android:layout_below="@+id/returnButton"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="1">
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/playBtnIcon"
-                    android:src="@drawable/audio_play_button"
-                    android:layout_weight="0.08" />
-            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
