--- a/app/src/main/res/layout/add_photo.xml
+++ b/app/src/main/res/layout/add_photo.xml
@@ -15,6 +15,8 @@
         android:id="@+id/scrollView">
 
 
+
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -123,5 +125,14 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabGoTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
+        android:src="@android:drawable/arrow_up_float" />
 
 </RelativeLayout>
